# chainquest-idle

./: .env.example  .gitignore  Cargo.toml  Dockerfile.enet  README.md  build.rs
.github/workflows/: add_assets.yml  ci.yml  frontend.yml  render_deploy.yml  sc_deploy.yml
frontend/: next.config.ts  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/status/: page.tsx
frontend/app/wallet/: page.tsx
frontend/app/wasm/: page.tsx
sc/: Cargo.toml
src/: app.rs  components.rs  game_plugin.rs  lib.rs  quest_system.rs  resources.rs  systems.rs  systems_idle.rs  systems_setup.rs  utils.rs
src/ai/: integration.rs  map_generator.rs  mod.rs  startup.rs
src/blockchain/: mod.rs
src/client/: main.rs
src/config/: env.rs  mod.rs  startup.rs
src/multiplayer/: client.rs  network.rs
src/security/: mod.rs
src/server/: main.rs
src/ui/: hud.rs
tests/: ai_map.rs  db.rs  enet.rs  idle_progress.rs
