[package]
name = "chainquest-idle"
version = "0.1.0"
edition = "2021"
authors = ["George Pricop <george.pricop@example.com>"]
description = "ChainQuest Idle - RPG blockchain idle game cu SFT-uri MultiversX, multiplayer co-op si AI generative"
license = "MIT"

[dependencies]
bevy = { version = "0.12", features = ["default", "dynamic_linking"] }
parking_lot = "0.12"
bgfx-rs = "0.18"
glfw = "0.54"
enet = "1.3"
tch = "0.15"
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
flate2 = "1.0"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
regex = "1.10"

# MultiversX dependencies
multiversx-sc = "0.47"
multiversx-sc-derive = "0.47"
multiversx-sc-wasm-adapter = "0.47"
multiversx-sc-modules = "0.47"
multiversx-sdk = { version = "0.7", features = ["http-reqwest"] }

[dev-dependencies]
multiversx-sc-scenario = "0.47"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"